update service, form search

--- a/sass/archive.scss
+++ b/sass/archive.scss
@@ -43,6 +43,51 @@
 			padding: 0 10px;
 		}
 	}
+	&_video{
+		display: grid;
+		grid-template-columns: repeat(3,1fr);
+		gap: 10px;
+		@media (max-width:768px) {
+			grid-template-columns: repeat(2,1fr);
+		}
+	}
+}
+.video{
+	position: relative;
+	&:hover {
+		img {
+			transform: scale(1.2);
+		}
+		.video_title{
+			color: $primary;
+		}
+	}
+	&_image{
+		overflow: hidden;
+		padding-top: 65%;
+		position: relative;
+	}
+	img {
+		object-fit: cover;
+		position: absolute;
+		inset: 0;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		transition: all .5s;
+	}
+	&_body{
+		background: $bgLight;
+		padding: $fontSize;
+	}
+	&_title{
+		font-weight: bold;
+		line-height: 1.3;
+		font-size: $fontSize;
+		overflow: hidden;
+		color: $colorText;
+	}
 }
 
 .sidebar {
