--- a/sass/components/_layout.scss
+++ b/sass/components/_layout.scss
@@ -573,3 +573,43 @@ input {
 	-webkit-animation-name: fadeInLeft;
 	animation-name: fadeInLeft
 }
+
+.modal_content:has(.search-form){
+	background: $light;
+	padding: 50px  20px;
+	max-width: 100vw;
+	width: 90%;
+	position: relative;
+	&::after{
+		content: '';
+		@include bg-gradien(90);
+		display: block;
+		height: 5px ;
+		width: 100%;
+		position: absolute;
+		bottom: 0;
+		left: 0;
+	}
+}
+.search-form{
+	display: flex;
+	width: 50%;
+	margin: auto;
+	label{
+		flex: 1;
+		display: block;
+		background: transparent;
+		margin: 0;
+	}
+	.search-field{
+		background-color: transparent !important;
+		border-bottom: #1189ca 2px solid;
+
+	}
+	.search-submit{
+		@include bg-gradien(90);
+		color: $light;
+		font-weight: bold;
+		margin-left: 5px;
+	}
+}
