--- a/sass/service.scss
+++ b/sass/service.scss
@@ -1,235 +1,216 @@
-
-.service{
-    margin: 0px 15px;
-}
-.service_title{
-    text-align: center;
-    font-size: 30px;
-    line-height: 45px;
-    font-weight: bold;
-    text-transform: uppercase;
-}
-.serviceItem{
-    &_image{
-        overflow: hidden;
-        
-        &:hover{
-            box-sizing: border-box;
-            img{
-                transform: scale(1.1);
-                
-            }             
-        }
-        img{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            transition: transform 0.5s ease-out;
-        }
-    }
-    &_body{
-        margin-top: -4px;
-        margin-bottom: 100px;
-        opacity: 0;
-        transition: opacity 0.5s ease-in-out ;
-        transition-delay: all 0.5s ease-in-out ;
-    }
-
-    &_title{
-        font-size: 25px;
-        padding: 20px 15px;
-        color: #fff;
-        line-height: 38px;
-        font-weight: bold;
-        cursor: grab;
-        // flex-flow: row nowrap;
-        position: relative;
-        z-index: 1;
-        text-transform: uppercase;
-        // flex-wrap: wrap;
-        background: linear-gradient(to right, rgb(17, 137, 202) 0% , rgb(53, 193, 182) 100%);
-        white-space: normal;
-        display: block;
-        margin-top: -25px;
-
-        opacity: 0;
-        transform: translateY(50px);
-        animation: fadeInUp  1s ease-in-out forwards;
-        @keyframes fadeInUp {
-            from{
-                opacity: 0;
-                transform: translateY(50px);
-            }
-            to{
-                opacity:1;
-                transform: translateY(0);
-            }
-        }
-
-        &:after{
-            content: "";
-            position: absolute;
-            z-index: -1;
-            top: 0;
-            left: 0;
-            right: 100%;
-            bottom: 0;
-            background-color: #118aca;
-            transition: right 0.5s ease-in-out;
-            box-sizing: border-box;
-
-        }
-        &:hover{
-            transition: color 0.5s ease-in-out;
-        }
-        &:hover{
-            &::after{
-                right: 0;
-                transition: right 0.5s ease-in-out;
-            }
-        }
-    }
-    &_des{
-        font-size: 16px;
-        line-height: 25px;
-        font-weight: 400;
-        padding: 0 15px;
-        margin-top: 20px;
-
-        opacity: 0;
-        transform: translateY(50px);
-        animation: fadeInUp  1s ease-in-out forwards;
-        @keyframes fadeInUp {
-            from{
-                opacity: 0;
-                transform: translateY(50px);
-            }
-            to{
-                opacity:1;
-                transform: translateY(0);
-            }
-        }
-    }
-    &_link{
-        border: 1px solid #000;
-        font-size: 20px;
-        padding: 10px 30px;
-        color: #333333;
-        font-weight: bold;
-        line-height: 22px;
-        cursor: grab;
-        margin:0 15px;
-        // flex-flow: row nowrap;
-        position: relative;
-        z-index:1;
-        top: 40px;
-        transition: color 0.25s ease-in-out;
-
-        opacity: 0;
-        transform: translateY(50px);
-        animation: fadeInUp  1s ease-in-out forwards;
-        @keyframes fadeInUp {
-            from{
-                opacity: 0;
-                transform: translateY(50px);
-            }
-            to{
-                opacity:1;
-                transform: translateY(0);
-            }
-        }
-
-        &:after{
-            content: "";
-            position: absolute;
-            z-index: -1;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 100%;
-            background-color: #000;
-            transition: bottom 0.25s ease-in-out;
-        }
-        &:hover{
-            color: white;
-            transition: color 0.5s ease-in-out;
-            &:after{
-                bottom: 0;
-                transition: bottom 0.5s ease-in-out;
-            }
-        }
-    }
+@import "variables";
+@import "components/mixin";
+.service {
+	margin: 0px 15px;
 }
 
-@media(min-width:1024px){
-    .service{
-        margin-bottom: 100px;
-    }
-    .serviceItem{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        justify-content: space-between;
-        // display: flex;
-        flex-wrap: wrap;
-        margin: 40px 0px;
+.service_title {
+	text-align: center;
+	font-size: 30px;
+	line-height: 45px;
+	font-weight: bold;
+	text-transform: uppercase;
+}
 
-        &_body{
-            margin: auto;
-        }
-        &_title{
-            position: relative;
-            top:-30px;
-            padding: 20px 30px;
-        }
-        &_des{
-            margin-top: -10px;
-            padding: 0px 30px;
-        }
-        &_link{
-            margin-top: 15px;
-        }
-    }
+.serviceItem {
+    margin: 40px 0px;
+	&_image {
+		overflow: hidden;
 
-    .serviceItem:nth-child(odd) .serviceItem{
-       &_image{
-        order:2;
-       }
-       &_body{
-        order:1;
-       }
-    }
-    
-    .serviceItem:nth-child(even) .serviceItem_title::before{
-        content: '';
-        position: absolute;
-        height: 100%;
-        width: 35px;
-        left: -35px;
-        top: 0;
-        bottom: 0;
-        background-color: #118aca;
-    }
+		&:hover {
+			box-sizing: border-box;
 
-    .serviceItem:nth-child(odd) .serviceItem_title{
-        &:before{
-            content: '';
-            position: absolute;
-            height: 100%;
-            width: 35px;
-            right: -35px;
-            top: 0;
-            bottom: 0;
-            background-color: #34bfb7;
-            z-index: -2;
-            transition: all .3s .5s ;
-        }
-        &:hover::after{
-            right: -35px;
+			img {
+				transform: scale(1.1);
+
+			}
+		}
+
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			transition: transform 0.5s ease-out;
+		}
+	}
+
+	&_body {
+
+
+		opacity: 0;
+		transition: opacity 0.5s ease-in-out;
+		transition-delay: all 0.5s ease-in-out;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+
+	&_title {
+		font-size: 20px;
+		padding: 20px 15px;
+		color: #fff;
+		font-weight: bold;
+		position: relative;
+		width: 100%;
+		display: block;
+		z-index: 1;
+		text-transform: uppercase;
+		opacity: 0;
+		animation: fadeInUp 1s ease-in-out forwards;
+        @include bg-gradien(90);
+
+
+		&:after {
+			content: "";
+			position: absolute;
+			z-index: -1;
+			top: 0;
+			left: 0;
+			right: 100%;
+			bottom: 0;
+			background-color: #118aca;
+			transition: right 0.5s ease-in-out;
+			box-sizing: border-box;
+
+		}
+
+		&:hover {
+			transition: color 0.5s ease-in-out;
+		}
+
+		&:hover {
+			&::after {
+				right: 0;
+				transition: right 0.5s ease-in-out;
+			}
+		}
+	}
+
+	&_des {
+		font-size: 16px;
+		line-height: 25px;
+		font-weight: 400;
+		padding: 0 15px;
+		margin-top: 20px;
+
+		opacity: 0;
+		transform: translateY(50px);
+		animation: fadeInUp 1s ease-in-out forwards;
+
+	}
+
+	&_link {
+		border: 1px solid #000;
+		font-size: 20px;
+		padding: 10px 30px;
+		color: #333333;
+		font-weight: bold;
+		margin: 0 15px;
+		position: relative;
+		z-index: 1;
+		display: inline-block;
+		transition: color 0.25s ease-in-out;
+		opacity: 0;
+		transform: translateY(50px);
+		width: fit-content;
+		animation: fadeInUp 1s ease-in-out forwards;
+        @media (max-width:900px) {
+            display: none;
         }
 
-    }
+		&:after {
+			content: "";
+			position: absolute;
+			z-index: -1;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 100%;
+			background-color: #000;
+			transition: bottom 0.25s ease-in-out;
+		}
+
+		&:hover {
+			color: white;
+			transition: color 0.5s ease-in-out;
+
+			&:after {
+				bottom: 0;
+				transition: bottom 0.5s ease-in-out;
+			}
+		}
+	}
+}
+
+@media(min-width:900px) {
+	.service {
+		margin-bottom: 100px;
+	}
+
+	.serviceItem {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+
+
+
+
+
+		&_link {
+			margin-top: 15px;
+		}
+	}
+
+	.serviceItem:nth-child(odd) .serviceItem {
+		&_image {
+			order: 2;
+		}
+
+		&_body {
+			order: 1;
+		}
+	}
+
+	.serviceItem:nth-child(even) .serviceItem_title::before {
+		content: '';
+		position: absolute;
+		height: 100%;
+		width: 35px;
+		left: -35px;
+		top: 0;
+		bottom: 0;
+		background-color: #118aca;
+	}
+
+	.serviceItem:nth-child(odd) .serviceItem_title {
+		&:before {
+			content: '';
+			position: absolute;
+			height: 100%;
+			width: 35px;
+			right: -35px;
+			top: 0;
+			bottom: 0;
+			background-color: #34bfb7;
+			z-index: -2;
+			transition: all .3s .5s;
+		}
+
+		&:hover::after {
+			right: -35px;
+		}
+
+	}
 
 }
 
+@keyframes fadeInUp {
+	from {
+		opacity: 0;
+		transform: translateY(50px);
+	}
 
-
+	to {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
