--- a/sass/home.scss
+++ b/sass/home.scss
@@ -102,14 +102,19 @@
 		white-space: nowrap;
 		text-overflow: ellipsis;
 		color: $primary;
+		@media (max-width:480px) {
+			padding: $fontSize;
+			}
 
 		a {
 			color: $primary;
 			font-weight: bold;
 			text-transform: uppercase;
 			font-size: $fontSize;
-
 			width: 100%;
+			@media (max-width:480px) {
+			font-size: calc($fontSize - 2px);
+			}
 		}
 	}
 
@@ -128,6 +133,15 @@
 		padding: 5px $fontSize;
 		transition: all .5s;
 
+		@media (max-width:1020px) {
+			bottom: 15%;
+			width: 50px;
+		height: 50px;
+		}
+		@media (max-width:480px) {
+			display: none;
+		}
+
 		svg {
 			width: 50px;
 			height: 50px;
@@ -137,6 +151,9 @@
 			top: 50%;
 			right: 2px;
 			transform: translateY(-50%);
+			@media (max-width:1020px) {
+				right: 0;
+			}
 		}
 
 		span {
